navigation icon spacing fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,9 +6,7 @@ html, body {
 
 #navigation{
   margin-bottom:5%;
-  margin-left: 11.9px;
   text-align: center;
-  letter-spacing: 10px;
   color: rgba(255, 255, 255, 0.2);
 }
 
